--- a/RedisMasterSlave/appsettings.Development.json
+++ b/RedisMasterSlave/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "Redis": "Localhost",
+  "Redis": "Localhost:6379,localhost:6380", // master and slave
   "Logging": {
     "LogLevel": {
       "Default": "Information",
